navigation menu add

--- a/index.html
+++ b/index.html
@@ -34,20 +34,30 @@
 
     <!-- Hero section -->
     <section class="hero" id="hero">
-      <div class="hero-info">
-        <h1 class="title">
-          We target the audience with our <span>ideas</span>.
-        </h1>
-        <p class="discription">
-          Advertising is relied upon to impact the states of mind, expectations
-          and conduct of the customer's clients and in this way increment .
-        </p>
-        <div class="more-info">
-          <span>Watch Video</span>
+      <div class="container">
+        <div class="hero-info">
+          <h1 class="title">
+            We target the <br />
+            audience with our <br />
+            <span>ideas</span>.
+          </h1>
+          <p class="discription">
+            Advertising is relied upon to impact the states of mind,
+            expectations and conduct of the customer's clients and in this way
+            increment .
+          </p>
+          <div class="more-info">
+            <a href="https://youtu.be/omWmWu1XO8U" target="_blank">
+              <span class="video-btn"></span>
+            </a>
+            <span>Watch Video</span>
+          </div>
+        </div>
+
+        <div class="hero-image">
+          <img src="./assets/images/profile.png" alt="profile-img" />
         </div>
       </div>
-
-      <div class="hero-image"></div>
     </section>
     <!-- /Hero section -->
   </body>
