About section add

--- a/index.html
+++ b/index.html
@@ -17,11 +17,19 @@
 
         <nav class="main-navigation">
           <ul class="main-navigations__items">
-            <li class="main-navigation__item"><a href="#">Home</a></li>
-            <li class="main-navigation__item"><a href="#">About</a></li>
-            <li class="main-navigation__item"><a href="#">Features</a></li>
-            <li class="main-navigation__item"><a href="#">Services</a></li>
-            <li class="main-navigation__item"><a href="#">Pricing</a></li>
+            <li class="main-navigation__item">
+              <a href="#main-header">Home</a>
+            </li>
+            <li class="main-navigation__item"><a href="#about">About</a></li>
+            <li class="main-navigation__item">
+              <a href="#features">Features</a>
+            </li>
+            <li class="main-navigation__item">
+              <a href="#services">Services</a>
+            </li>
+            <li class="main-navigation__item">
+              <a href="#pricing">Pricing</a>
+            </li>
           </ul>
         </nav>
 
@@ -124,18 +132,28 @@
         </div>
         <div class="skills">
           <p>Web Design</p>
-          <span class="line-wrapper line-wrapper__1">
-            <span class="line-wrapper__bg"></span>
+          <span class="line-wrapper line-wrapper__1 percent-value__1">
+            <span class="line-wrapper__bg line-wrapper__bg-1"></span>
           </span>
           <p>UI & UX Design</p>
-          <span class="line-wrapper line-wrapper__2"></span>
+          <span class="line-wrapper line-wrapper__2 percent-value__2">
+            <span class="line-wrapper__bg line-wrapper__bg-2"></span>
+          </span>
           <p>Graphic Design</p>
-          <span class="line-wrapper line-wrapper__3"></span>
+          <span class="line-wrapper line-wrapper__3 percent-value__3">
+            <span class="line-wrapper__bg line-wrapper__bg-3"></span>
+          </span>
           <p>Photo Retouching</p>
-          <span class="line-wrapper line-wrapper__4"></span>
+          <span class="line-wrapper line-wrapper__4 percent-value__4">
+            <span class="line-wrapper__bg line-wrapper__bg-4"></span>
+          </span>
         </div>
       </div>
     </section>
     <!-- /About section -->
+
+    <!-- Features section -->
+    <section class="features" id="features"></section>
+    <!-- /Features section -->
   </body>
 </html>
