About section add

--- a/index.html
+++ b/index.html
@@ -153,7 +153,42 @@
     <!-- /About section -->
 
     <!-- Features section -->
-    <section class="features" id="features"></section>
+    <section class="features" id="features">
+      <div class="container">
+        <h2 class="title">We have impressive Template Features</h2>
+        <p class="discription">
+          Advertising office is a business that helps promoters in all phases of
+          the advertising procedure - from record administration and intending
+          to message creation.
+        </p>
+        <div class="features-items">
+          <div class="features-item__card">
+            <div class="card-icon__wrapper"></div>
+            <h3>High quality</h3>
+            <p>An agency philosophy is distinctive features .</p>
+            <button class="button">Read More</button>
+          </div>
+          <div class="features-item__card">
+            <div class="card-icon__wrapper"></div>
+            <h3>User Friendly</h3>
+            <p>An agency philosophy is distinctive features .</p>
+            <button class="button">Read More</button>
+          </div>
+          <div class="features-item__card">
+            <div class="card-icon__wrapper"></div>
+            <h3>Notifications</h3>
+            <p>An agency philosophy is distinctive features .</p>
+            <button class="button">Read More</button>
+          </div>
+          <div class="features-item__card">
+            <div class="card-icon__wrapper"></div>
+            <h3>24/7 Support</h3>
+            <p>An agency philosophy is distinctive features .</p>
+            <button class="button">Read More</button>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- /Features section -->
   </body>
 </html>
