About section add

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <div class="main-header__brand">
           <a href="index.html">Innovated</a>
         </div>
-
         <nav class="main-navigation">
           <ul class="main-navigations__items">
             <li class="main-navigation__item">
@@ -305,8 +304,184 @@
         </p>
         <div class="services-card__items">
           <div class="services-card__item">
-            <h4>Web Development</h4>
-            <p>Lorem ipsum dolor sit ame consectetur elit.</p>
+            <div class="services-card__item-box">
+              <h4>Web Development</h4>
+              <p>Lorem ipsum dolor sit ame consectetur elit.</p>
+              <span class="icon-wrapper">
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M8 1V15"
+                    stroke="#050C26"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M15 8L8 15L1 8"
+                    stroke="#050C26"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </span>
+            </div>
+          </div>
+          <div class="services-card__item">
+            <div class="services-card__item-box">
+              <h4>Web Development</h4>
+              <p>Lorem ipsum dolor sit ame consectetur elit.</p>
+              <span class="icon-wrapper">
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M8 1V15"
+                    stroke="#050C26"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M15 8L8 15L1 8"
+                    stroke="#050C26"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </span>
+            </div>
+          </div>
+          <div class="services-card__item">
+            <div class="services-card__item-box">
+              <h4>Web Development</h4>
+              <p>Lorem ipsum dolor sit ame consectetur elit.</p>
+              <span class="icon-wrapper">
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M8 1V15"
+                    stroke="#050C26"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M15 8L8 15L1 8"
+                    stroke="#050C26"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </span>
+            </div>
+          </div>
+          <div class="services-card__item">
+            <div class="services-card__item-box">
+              <h4>Web Development</h4>
+              <p>Lorem ipsum dolor sit ame consectetur elit.</p>
+              <span class="icon-wrapper">
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M8 1V15"
+                    stroke="#050C26"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M15 8L8 15L1 8"
+                    stroke="#050C26"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </span>
+            </div>
+          </div>
+          <div class="services-card__item">
+            <div class="services-card__item-box">
+              <h4>Web Development</h4>
+              <p>Lorem ipsum dolor sit ame consectetur elit.</p>
+              <span class="icon-wrapper">
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M8 1V15"
+                    stroke="#050C26"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M15 8L8 15L1 8"
+                    stroke="#050C26"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </span>
+            </div>
+          </div>
+          <div class="services-card__item">
+            <div class="services-card__item-box">
+              <h4>Web Development</h4>
+              <p>Lorem ipsum dolor sit ame consectetur elit.</p>
+              <span class="icon-wrapper">
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M8 1V15"
+                    stroke="#050C26"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    d="M15 8L8 15L1 8"
+                    stroke="#050C26"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </span>
+            </div>
           </div>
         </div>
       </div>
