About section add

--- a/index.html
+++ b/index.html
@@ -293,11 +293,11 @@
     <!-- Services section -->
     <section class="services" id="services">
       <div class="container">
-        <h2>
+        <h2 class="title">
           Our best services to solve <br />
           Your problems.
         </h2>
-        <p>
+        <p class="discription">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Auctor
           tincidunt neque vulputate vel sit ornare in ac. Aenean integer amet
           viverra sed gravida.
@@ -487,5 +487,64 @@
       </div>
     </section>
     <!-- Services section -->
+
+    <!-- Pricing section -->
+    <section class="pricing" id="pricing">
+      <div class="container">
+        <p>The best offsrs</p>
+        <h3>Our pricing plan</h3>
+        <div class="billing-wrapper">
+          <span>Yearly Billing</span>
+          <span>Monthly billing</span>
+        </div>
+        <div class="billing-cards__wrapper">
+          <div class="billing-card">
+            <div class="billing-card__header">Basic</div>
+            <div class="price-wrapper">
+              <p class="price"><span>&dollar;</span> 20</p>
+              <p>Per of month</p>
+            </div>
+            <div class="support-section">
+              <p>25 GB Disk Space</p>
+              <p>Mail Support</p>
+              <p>15 Domains</p>
+              <p>No License</p>
+            </div>
+            <div class="card-btn"><a href="#">Purchase</a></div>
+          </div>
+
+          <div class="billing-card">
+            <div class="billing-card__header">Business</div>
+            <div class="price-wrapper">
+              <p class="price"><span>&dollar;</span> 30</p>
+              <p>Per of month</p>
+            </div>
+            <div class="support-section">
+              <p>30 GB Disk Space</p>
+              <p>Mail Support</p>
+              <p>25 Domains</p>
+              <p>No License</p>
+            </div>
+            <div class="card-btn"><a href="#">Purchase</a></div>
+          </div>
+
+          <div class="billing-card">
+            <div class="billing-card__header">Premium</div>
+            <div class="price-wrapper">
+              <p class="price"><span>&dollar;</span> 50</p>
+              <p>Per of month</p>
+            </div>
+            <div class="support-section">
+              <p>50 GB Disk Space</p>
+              <p>Mail Support</p>
+              <p>40 Domains</p>
+              <p>No License</p>
+            </div>
+            <div class="card-btn"><a href="#">Purchase</a></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /Pricing section -->
   </body>
 </html>
