About section add

--- a/index.html
+++ b/index.html
@@ -491,11 +491,11 @@
     <!-- Pricing section -->
     <section class="pricing" id="pricing">
       <div class="container">
-        <p>The best offsrs</p>
-        <h3>Our pricing plan</h3>
+        <p class="intro">The best offsrs</p>
+        <h3 class="title">Our pricing plan</h3>
         <div class="billing-wrapper">
+          <span class="active">Monthly billing</span>
           <span>Yearly Billing</span>
-          <span>Monthly billing</span>
         </div>
         <div class="billing-cards__wrapper">
           <div class="billing-card">
@@ -546,5 +546,10 @@
       </div>
     </section>
     <!-- /Pricing section -->
+
+    <!-- Clients section -->
+    <section class="clients" id="clients"></section>
+    <!-- /Clients section -->
+    <script src="./js/main.js"></script>
   </body>
 </html>
