--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Innovated</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <!-- Header section -->
@@ -33,7 +40,7 @@
         </nav>
 
         <div class="main-header__contact">
-          <button class="button">Contact</button>
+          <a href="#footer" class="button">Contact</a>
         </div>
       </div>
     </header>
@@ -548,8 +555,69 @@
     <!-- /Pricing section -->
 
     <!-- Clients section -->
-    <section class="clients" id="clients"></section>
+    <section class="clients" id="clients">
+      <div class="container">
+        <h2 class="title">See what our clients say!</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius semper
+          velit non nulla adipiscing nisl vel mi elementum.
+        </p>
+      </div>
+    </section>
     <!-- /Clients section -->
+
+    <!-- Footer section -->
+    <footer class="footer" id="footer">
+      <div class="container">
+        <div class="footer-brand">
+          <h3 class="brand">Innovated</h3>
+          <p class="brand-info">
+            Advertising office is a business that helps promoters in all phases
+            of the advertising procedure - from record administration.
+          </p>
+        </div>
+
+        <div class="services">
+          <p class="header">Services</p>
+          <ul>
+            <li>Logo & Branding</li>
+            <li>Social Media Marketing</li>
+            <li>Website Development</li>
+            <li>Search Engine Optimization</li>
+          </ul>
+        </div>
+
+        <div class="support">
+          <p class="header">Support</p>
+          <ul>
+            <li>Contact Us</li>
+            <li>Support System</li>
+            <li>Refund Policy</li>
+            <li>Privacy Policy</li>
+          </ul>
+        </div>
+
+        <div class="contact">
+          <p class="header">Contact Us</p>
+          <p class="email">
+            <a href="mailto:shovasatkhira88@info">shovasatkhira88@info</a>
+          </p>
+          <div class="social-networks">
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram-square"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-google"></i></a>
+          </div>
+          <button class="button">Subscribe</button>
+        </div>
+      </div>
+
+      <div class="footer-container">
+        <hr />
+        <p>Copyright 2020 The Innovated All Rights Reserved.</p>
+      </div>
+    </footer>
+    <!-- /Footer section -->
     <script src="./js/main.js"></script>
   </body>
 </html>
