Media query add

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="main-header__brand">
           <a href="index.html">Innovated</a>
         </div>
+
         <nav class="main-navigation">
           <ul class="main-navigations__items">
             <li class="main-navigation__item">
@@ -51,8 +52,8 @@
       <div class="container">
         <div class="hero-info">
           <h1 class="title">
-            We target the <br />
-            audience with our <br />
+            We target the
+            audience with our
             <span>ideas</span>.
           </h1>
           <p class="discription">
@@ -129,7 +130,7 @@
       <h2 class="title">Transforming brands with creativity</h2>
       <p class="discription">
         As a rule the organization settles on the inventive and media choices.
-        Regularly it supplies <br />
+        Regularly it supplies
         supporting statistical surveying too, and may even be associated.
       </p>
       <div class="about-our__more">
@@ -667,6 +668,7 @@
       </div>
     </footer>
     <!-- /Footer section -->
+    <a href="#" class="bottom_right_btn"><i class="fa-solid fa-arrow-up"></i></a>
     <script src="./js/main.js"></script>
   </body>
 </html>
