--- a/index.html
+++ b/index.html
@@ -139,21 +139,13 @@
         </div>
         <div class="skills">
           <p>Web Design</p>
-          <span class="line-wrapper line-wrapper__1 percent-value__1">
-            <span class="line-wrapper__bg line-wrapper__bg-1"></span>
-          </span>
+          <div class="line-wrapper__bg line-wrapper__bg-1"><div class="line-wrapper line-wrapper-1"></div></div>
           <p>UI & UX Design</p>
-          <span class="line-wrapper line-wrapper__2 percent-value__2">
-            <span class="line-wrapper__bg line-wrapper__bg-2"></span>
-          </span>
+          <div class="line-wrapper__bg line-wrapper__bg-2"><div class="line-wrapper line-wrapper-2"></div></div>
           <p>Graphic Design</p>
-          <span class="line-wrapper line-wrapper__3 percent-value__3">
-            <span class="line-wrapper__bg line-wrapper__bg-3"></span>
-          </span>
+          <div class="line-wrapper__bg line-wrapper__bg-3"><div class="line-wrapper line-wrapper-3"></div></div>
           <p>Photo Retouching</p>
-          <span class="line-wrapper line-wrapper__4 percent-value__4">
-            <span class="line-wrapper__bg line-wrapper__bg-4"></span>
-          </span>
+          <div class="line-wrapper__bg line-wrapper__bg-4"><div class="line-wrapper line-wrapper-4"></div></div>
         </div>
       </div>
     </section>
