Media query full add

--- a/index.html
+++ b/index.html
@@ -137,15 +137,16 @@
         <div class="our-team-image">
           <img src="./assets/images/friends.png" alt="our-team-img" />
         </div>
+        
         <div class="skills">
           <p>Web Design</p>
-          <div class="line-wrapper__bg line-wrapper__bg-1"><div class="line-wrapper line-wrapper-1"></div></div>
+          <div class="line-wrapper__bg line-wrapper__bg-1 percent-value__1"><div class="line-wrapper line-wrapper-1"></div></div>
           <p>UI & UX Design</p>
-          <div class="line-wrapper__bg line-wrapper__bg-2"><div class="line-wrapper line-wrapper-2"></div></div>
+          <div class="line-wrapper__bg line-wrapper__bg-2 percent-value__2"><div class="line-wrapper line-wrapper-2"></div></div>
           <p>Graphic Design</p>
-          <div class="line-wrapper__bg line-wrapper__bg-3"><div class="line-wrapper line-wrapper-3"></div></div>
+          <div class="line-wrapper__bg line-wrapper__bg-3 percent-value__3"><div class="line-wrapper line-wrapper-3"></div></div>
           <p>Photo Retouching</p>
-          <div class="line-wrapper__bg line-wrapper__bg-4"><div class="line-wrapper line-wrapper-4"></div></div>
+          <div class="line-wrapper__bg line-wrapper__bg-4 percent-value__4"><div class="line-wrapper line-wrapper-4"></div></div>
         </div>
       </div>
     </section>
