--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         <div class="main-header__contact">
           <a href="#footer" class="button">Contact</a>
         </div>
+        
+        <div class="nav-toggle__btn">
+          <i class="fa-solid fa-bars"></i>
+        </div>
       </div>
     </header>
     <!-- /Header section -->
